[package]
name = "move-executor"
version = "0.1.0"
authors = ["Maksim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
serde = "1.0.106"
serde_json = "1.0.52"
clap = "2.33.1"

shared = { path = "../dialects/shared" }
dialects = { path = "../dialects" }
utils = { path = "../utils" }