[package]
name = "utils"
version = "0.1.0"
authors = ["Maksim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.30"
log = "0.4"
walkdir = "2.3.1"

lsp-types = {version = "0.74.0", features = ["proposed"]}

codespan = "0.8.0"
codespan-reporting = "0.8.0"
codespan9 = { package = "codespan", version = "0.9.2" }
codespan-reporting9 = { package = "codespan-reporting", version = "0.9.2" }

ra_vfs = "0.6.1"
