[package]
name = "client"
version = "0.1.0"
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.76"
anyhow = "1.0.43"
proto = { path = "../proto" }
wasm-bindgen-futures = "0.4.26"
reqwest = "0.11.4"
serde = "1.0.125"
serde_derive = "1.0.125"
bcs = "0.1.3"

[dependencies.web-sys]
version = "0.3.53"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    "XmlHttpRequest",
    "Navigator",
    "FormData",
    "Window",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
    "Location"
]
