# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "move-compat"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# lib, wasm, cffi:
[dependencies]
anyhow = { version = "1.0", default-features = false }
move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "release-v1.3-diff" }
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "release-v1.3-diff" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
