# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "move-compat"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# lib, wasm, cffi:
[dependencies]
# third-party dependencies
anyhow = { version = "1.0", default-features = false }
# DIEM
dialect = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# third-party dependencies
anyhow = "1.0"
