# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "decompiler"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "decompiler"

# lib, wasm, cffi:
[dependencies]
rand = "=0.7.3"
itertools = "0.9"
hex = "0.4"
anyhow = { version = "1.0", default-features = false }
diem-types = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }
bcs = "0.1.2"
vm = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }
compat = { path = "../compat", package = "move-compat" }
git-hash = { path = "../../common/git-hash" }

[dev-dependencies]
move-lang = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }

[features]
cffi = []

# cli:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.70"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
lang = { path = ".." }
