# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "disassembler"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "disassembler"

# lib, wasm, cffi:
[dependencies]
rand = "0.7"
itertools = "0.9"
hex = "0.4"
anyhow = { version = "1.0", default-features = false }
diem-types = { git = "https://github.com/dfinance/libra.git", branch = "release-1.1.4" }
move-core-types = { git = "https://github.com/dfinance/libra.git", branch = "release-1.1.4" }
bcs = "0.1.1"
vm = { git = "https://github.com/dfinance/libra.git", branch = "release-1.1.4" }
compat = { path = "../compat", package = "move-compat" }
git-hash = { path = "../../common/git-hash" }

[features]
default = [
    "ps_address"
]

cffi = []
diem_address = [
    "diem-types/diem_address",
    "move-core-types/diem_address",
    "vm/diem_address",
    "compat/diem_address",
]
dfinance_address = [
    "diem-types/dfinance_address",
    "move-core-types/dfinance_address",
    "vm/dfinance_address",
    "compat/dfinance_address",
]
ps_address = [
    "diem-types/ps_address",
    "move-core-types/ps_address",
    "vm/ps_address",
    "compat/ps_address",
]

# cli:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.70"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
lang = { path = ".." }
