[package]
name = "lang"
version = "0.1.0"
authors = ["Maksim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.52"
codespan = "0.8.0"

#move-vm-runtime = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#move-vm-state = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#move-vm-types = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#libra-state-view = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#language-e2e-tests = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#move-core-types = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#vm = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#libra-types = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#move-lang = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#libra-canonical-serialization = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#libra-crypto = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
#move-ir-types = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }

dfinance-move-vm-runtime = { package = "move-vm-runtime", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-move-vm-state = { package = "move-vm-state", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-move-vm-types = { package = "move-vm-types", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-libra-state-view = { package = "libra-state-view", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-language-e2e-tests = { package = "language-e2e-tests", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-move-core-types = { package = "move-core-types", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-vm = { package = "vm", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-libra-types = { package = "libra-types", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-move-lang = { package = "move-lang", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-libra-canonical-serialization = { package = "libra-canonical-serialization", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-libra-crypto = { package = "libra-crypto", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }
dfinance-move-ir-types = { package = "move-ir-types", git = "https://github.com/dfinance/libra.git", branch = "12.05.2020" }

#
move-vm-runtime = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
move-vm-state = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
move-vm-types = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
libra-state-view = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
language-e2e-tests = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
move-core-types = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
vm = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
libra-types = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
move-lang = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
libra-canonical-serialization = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
libra-crypto = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }
move-ir-types = { git = "https://github.com/dfinance/libra.git", branch = "12.05.2020.original" }

#move-vm-runtime = { path = "../../../dvm-libra/language/move-vm/runtime" }
#move-vm-state = { path = "../../../dvm-libra/language/move-vm/state" }
#move-vm-types = { path = "../../../dvm-libra/language/move-vm/types" }
#libra-state-view = { path = "../../../dvm-libra/storage/state-view" }
#language-e2e-tests = { path = "../../../dvm-libra/language/e2e-tests" }
#move-core-types = { path = "../../../dvm-libra/language/move-core/types" }
#vm = { path = "../../../dvm-libra/language/vm" }
#libra-types = { path = "../../../dvm-libra/types" }
#move-lang = { path = "../../../dvm-libra/language/move-lang" }
#libra-canonical-serialization = { path = "../../../dvm-libra/common/lcs" }
#libra-crypto = { path = "../../../dvm-libra/crypto/crypto" }
#move-ir-types = { path = "../../../dvm-libra/language/move-ir/types" }

shared = { path = "../shared" }
utils = { path = "../../utils" }
