[package]
name = "shared"
version = "0.1.0"
authors = ["Maksim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
thiserror = "1.0.18"

serde = "1.0.106"
serde_derive = "1.0.106"

utils = { path = "../../utils" }
