[package]
name = "shared"
version = "0.1.0"
authors = ["Maksim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
serde = "1.0.106"
serde_derive = "1.0.106"

# bech32 support
hex = "0.4.2"
regex = "1.3.7"
lazy_static = "1.4.0"
bech32 = "0.7.2"

utils = { path = "../../utils" }
